# pbirs-connector

./: .gitignore  .pre-commit-config.yaml  api_domain.py  mypy.ini  powerbi_report_server.py  powerbi_report_server.yml  setup.cfg  setup.py  test_connector.py
old/: config.py  model_domain.py  powerbi.py  powerbi_report_server_backup.py
ready-tools/downloadreportsfromdb/: igcapi.py  main.py  powerapi.py  pqparser.py  repository.py  run_template.py  xmlfactory.py
src/powerbi_report_server/: powerbi_report_server.py
