[metadata]
description-file = README.md

[flake8]
max-line-length = 120
ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,graylogger,rabbit,schedule_utils,Demo,venv

[mypy]
ignore_missing_imports = True

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
